minor nuclear stuff and typos

--- a/intro.tex
+++ b/intro.tex
@@ -774,17 +774,19 @@ the decay heat may be enough to damage the core of a reactor significantly
 \cite[p.~VIII-9 and VIII-25f]{1975:reactor:safety:study}.}
 
 Due to their critical role for the functioning of emergency cooling systems,
+and thus for the safety systems of nuclear power plants in general \cite[pp.~1, 4]{csni86-115},
 there are usually several diesel generators installed in a nuclear power plant,
 each of which can supply enough energy to power the cooling systems on its own.
 The number of diesel generators installed is typically in the range of two to four per reactor
-**EPRI NP-2433 ??***.
+%**EPRI NP-2433 ??***.
+(see, e.g., \cite[pp.~121, 145]{csni86-115}).
 If the nuclear power plant has several reactors, diesel generators may be shared between reactors \cite[p.~7]{2004:iaea::emergencypower}.
 %i.e., there are four redundant components, of which one is needed for service.
 %with a redundancy in the order of four or 
 The Fukushima Daiichi nuclear disaster is a recent example of an accident
 involving common cause failure of diesel generators.
 In this case, all 12 available diesel generators at reactors 1 to 6 
-ceased to function due to a tsunami wave flooding the rooms where they were situated \cite[p.~31]{2011:iaea::report}.
+ceased to function due to a tsunami wave flooding the rooms where they were installed \cite[p.~31]{2011:iaea::report}.
 The tsunami wave had been caused by the T\={o}hoku earthquake \cite{2012:ritsema},
 which had promted the reactors to shutdown automatically, and in doing so,
 switching to the diesel generators for power supply.%
@@ -1011,7 +1013,7 @@ and $\E[\alpha_j\mid\nz,\byz,\vec{n}] \to \frac{n_j}{n}$ as $n \to \infty$.
 \end{itemize}
 
 
-\subsection{Ususal Handling of Epistemic Information for Alpha-Factors}
+\subsection{Usual Handling of Epistemic Information for Alpha-Factors}
 \label{sec:epistemic-alpha}
 
 Crucial to reliable inference in the alpha-factor model
