--- a/bib/other-refs.bib
+++ b/bib/other-refs.bib
@@ -159,3 +159,13 @@ author = "W.F. Werner and M. Hirano and S. Kondo and G. Johanson and J.M. Lanore
   optnote = {},
   optannote = {}
 }
+
+@proceedings{csni86-115,
+  title = {{CSNI} Specialist Meeting on Operating Experience Relating to On-Site Electric Power Sources},
+  year = {1986},
+  editor = {Ishack, G. and Fourest, B. and Kotthoff, K. and Macleod, J.S. and Baranowsky, P. and Morimoto, K.},
+  publisher = {OECD Nuclear Energy Agency},
+  note = {CSNI Report No.~115},
+  month = {February},
+  address = {Paris, France},
+}
