some bayesian testing stuff

--- a/intro.tex
+++ b/intro.tex
@@ -486,8 +486,12 @@ delimited by the $\frac{1-\gamma}{2}$- and the $\frac{1+\gamma}{2}$-quantile of 
 
 The \textbf{testing of hypotheses} concerning the parameter of interest $\theta$ can be done
 by comparing posterior probabilities of two (disjunct) subsets of the parameter space.
-Like in frequentist Neyman-Pearson testing, these are denoted by $H_0$ and $H_1$,
+Like in frequentist Neyman-Pearson testing, these are often denoted by $H_0$ and $H_1$,
 but unlike there, in Bayesian testing these hypotheses play a symmetric role.
+
+Can express evidence \emph{in favour of} point-null hypothesis (Kass \& Raftery).
+
+The problem (?) with point-null hypotheses (Robert), but model selection.
 
 ****more on Bayes factors, etc.***
 
@@ -499,7 +503,11 @@ Bayes factor definition: \cite[\S 5.2.2, Def.~5.2.5, p.~227]{2007:robert}
 
 Article on Bayes factors as entity of its own: Kass \& Raftery 1995: Bayes factor and model uncertainty, JASA 90, 773--795
 
-improper priors are problematic in Bayesian testing \cite[\S 5.2.5, p.~232ff]{2007:robert}
+Improper priors are problematic in Bayesian testing \cite[\S 5.2.5, p.~232ff]{2007:robert};
+we see this as a strong argument for proper priors.
+An example where a proper prior is necessary to obtain useful results also for parameter estimation
+is given in Section~\ref{sec:alpha-factor-prior};
+a note on improper priors from the viewpoint of generalized Bayesian inference is given in Section~* *****.
 
 \cite[p.~235f]{2007:robert}
 \begin{quote}
