some bayesian testing stuff 2

--- a/intro.tex
+++ b/intro.tex
@@ -486,12 +486,14 @@ delimited by the $\frac{1-\gamma}{2}$- and the $\frac{1+\gamma}{2}$-quantile of 
 
 The \textbf{testing of hypotheses} concerning the parameter of interest $\theta$ can be done
 by comparing posterior probabilities of two (disjunct) subsets of the parameter space.
-Like in frequentist Neyman-Pearson testing, these are often denoted by $H_0$ and $H_1$,
-but unlike there, in Bayesian testing these hypotheses play a symmetric role.
+Like in frequentist Neyman-Pearson testing, these are often denoted by $\Theta_0$ and $\Theta_1$,
+but unlike there, in Bayesian testing the hypotheses $H_0: \theta \in \Theta_0$ and $H_1: \theta \in \Theta_1$ play a symmetric role.
 
 Can express evidence \emph{in favour of} point-null hypothesis (Kass \& Raftery).
 
-The problem (?) with point-null hypotheses (Robert), but model selection.
+The problem with point-null hypotheses (Robert)???
+
+Model selection mostly and Testing closely related.
 
 ****more on Bayes factors, etc.***
 
@@ -520,6 +522,7 @@ since it is the only coherent approach taking advantage of the residual informat
 \end{quote}
 
 ****end more on Bayes factors, etc.***
+
 
 The \textbf{posterior predictive} distribution, giving the probability for $s^*$ successes in $n^*$ future trials
 after having seen $s$ successes in $n$ trials, is
