summary and frontmatter (TA)

--- a/head.tex
+++ b/head.tex
@@ -94,7 +94,7 @@
     \vspace*{\stretch{1}}
     \Large vorgelegt von\\
     \Large #2\\
-    \Large geboren am 26.06.~1979 in #3\\
+    \Large geboren am 26.06.1979 in #3\\
     \vspace*{\stretch{2}}
     \Large M\"unchen, den #6
   \end{center}
