--- a/bib/eigene.bib
+++ b/bib/eigene.bib
@@ -102,14 +102,15 @@
   note = {\url{http://epub.ub.uni-muenchen.de/14068/}},
 }
 
-@article{Troffaes2013a,
+@misc{Troffaes2013a,
     Author = {Matthias C. M. Troffaes and Gero Walter and Dana L. Kelly},
     Title = {A Robust {B}ayesian Approach to Modelling Epistemic Uncertainty in Common-Cause Failure Models},
-    Journal = {Reliability Engineering \& System Safety},
+    note = {Submitted to: Reliability Engineering \& System Safety},
     Pages = {},
     Volume = {},
+    Month = {January},
     Year = {2013},
-    note = {Submitted to Reliability Engineering \& System Safety},
+    howpublished = {Available at \url{http://arxiv.org/abs/1301.0533}},
 }
 
 @incollection{itip-statinf,
