--- a/intro.tex
+++ b/intro.tex
@@ -983,6 +983,7 @@ As mentioned already, in this application of multinomial sample model,
 the $n_j$ are usually very low for $j\ge 2$,
 with zero being quite common for larger $j$.
 In such cases, standard techniques such as maximum likelihood for estimating the alpha-factors fail to produce sensible inferences.
+****citation***
 For any inference to be reasonably possible, it has been recognized \cite{1988:mosleh::common:cause}
 that we have to rely on epistemic information, that is, information which is not just described by the data.
 
