minor stuff and comments TA

--- a/genbayesinf.tex
+++ b/genbayesinf.tex
@@ -2,7 +2,7 @@
 
 \begin{itemize}
 \item Short introduction to IP (sets of priors, lower/upper prevision/probability)
-\item motivate imprecise priors with ress paper: \cite{Walter2013a}
+\item motivate imprecise priors with ress paper: \cite{Troffaes2013a} --- now in intro 
 \item Generalized Bayesian inference
 \item Generalized Bayesian inference with sets of priors
  \begin{itemize}
